setup : forcer la langue fr

--- a/.env
+++ b/.env
@@ -13,6 +13,17 @@ WHISPER_MODEL=base
 
 # Langue par défaut pour la transcription
 LANGUAGE=fr
+WHISPER_LANGUAGE=fr
+DEFAULT_LANGUAGE=fr
 
 # Port d'accès à l'interface web
 WEB_PORT=3001
+
+# Détection automatique de la langue (désactiver pour forcer le français)
+WHISPER_DETECT_LANGUAGE=false
+
+# Taille des lots de traitement (réduire si problèmes de mémoire)
+WHISPER_BATCH_SIZE=16
+
+# Accélération matérielle (cpu par défaut, gpu si disponible)
+HARDWARE_ACCEL=cpu
