--- a/.env
+++ b/.env
@@ -10,6 +10,8 @@ TZ=Europe/Paris
 # Modèle Whisper à utiliser (tiny, base, small, medium, large)
 # Plus le modèle est grand, plus il est précis mais plus lent
 WHISPER_MODEL=base
+SCRIBRR_WEB_URL=https://writer.upsylon.tech
+SCRIBRR_BASE_URL=https://writer.upsylon.tech
 
 # Langue par défaut pour la transcription
 LANGUAGE=fr
